# BaremaLattes

./: .gitignore  README.md  compose.yaml  init.sql  pyproject.toml  relatorio_pesquisadores.xlsx  score.xlsx
data/raw/lattes/: 2111143546940801.xml:Zone.Identifier
migrations/: env.py
migrations/versions/: 0457fb4f0f1f_.py  152aa7c9a91f_.py  20ee809d2d71_.py  237662e4c56c_.py  2a83e4d180b6_.py  2aa0a7e2f7bc_.py  2adf8de5e997_.py  2eabd1fb6db4_.py  348751a4adb9_.py  3e30166ea95e_.py  3e5a6c566f50_.py  42ed4faa1e42_.py  441b1bb149aa_.py  46e06eff626d_.py  4c46eb6845f3_.py  55de0fea2906_.py  67fa79b921cb_.py  6cf1cf66e64c_.py  75c08b8d22ad_.py  827de77edd1e_.py  82af0aaac3bb_.py  857282e13e8b_.py  8c225273971e_.py  a7c0bf36b9a9_.py  a95b223dda79_.py  a982d3f55527_.py  b0b0223646b9_.py  b893a15b9b00_.py  bf1c9aad1865_.py  c2c457c047fa_.py  c7657d6121f3_.py  d056595803ab_.py  e2762132f61b_.py  e425cef08ece_.py  ee325917af55_.py  f13d85bf134a_.py
src/barema/: __main__.py  main.py  prompts.py  shell.py
src/barema/core/: generate_report.py  report_generation.py  review_data.py  settings.py  setup.py
src/barema/db/: connection.py  models.py
src/barema/services/: ai_evaluation.py  ai_extraction.py  ai_sumula.py  ai_tag.py  download_lattes.py  pre_process_projects.py  queries.py  report_utils.py
src/baremalattes/: __main__.py  download.py  openAlex.py  report.py  settings.py  step1.py  step2.py  step3.py  step4.py
src/baremalattes/core/: database.py  settings.py
src/baremalattes/database/: connection.py  models.py
src/baremalattes/report/: __init__.py  ai_evaluation.py  ia_evaluation.py  metrics.py  prompts.py
