[project]
name = "baremalattes"
version = "1.0.0"
description = ""
authors = [
    {name = "gmcosta",email = "geu_costa@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["zeep (>=4.3.2,<5.0.0)", "rich (>=14.3.2,<15.0.0)", "typer (>=0.23.1,<0.24.0)", "polars (>=1.38.1,<2.0.0)", "httpx (>=0.28.1,<0.29.0)"]

[tool.poetry]
packages = [{include = "baremalattes", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
