[project]
name = "baremalattes"
version = "1.0.0"
description = ""
authors = [
    {name = "gmcosta",email = "geu_costa@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["zeep (>=4.3.2,<5.0.0)", "rich (>=14.3.2,<15.0.0)", "typer (>=0.23.1,<0.24.0)", "polars (>=1.38.1,<2.0.0)", "httpx (>=0.28.1,<0.29.0)", "docker (>=7.1.0,<8.0.0)", "sqlalchemy (>=2.0.46,<3.0.0)", "alembic (>=1.18.4,<2.0.0)", "pydantic-settings (>=2.13.0,<3.0.0)", "psycopg (>=3.3.2,<4.0.0)"]

[tool.poetry]
packages = [{include = "baremalattes", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 81
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'
