[project]
name = "barema"
version = "0.1.0"
description = ""
authors = [{name = "meirelesgc",email = "geu_docsta@outlook.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["tqdm (>=4.67.3,<5.0.0)", "polars (>=1.38.1,<2.0.0)", "httpx (>=0.28.1,<0.29.0)", "requests (>=2.32.5,<3.0.0)"]

[tool.poetry]
packages = [{include = "barema", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
